# tiny_sentence_tokenizer

./: Cargo.toml  README.md  build.rs  pyproject.toml
src/: inference.rs  lib.rs  run_model.rs
trained_models/: sentence_tokenizer_v11_64_prefix_64_suffix_256.onnx  sentence_tokenizer_v6_24x256.onnx
training/: TrainModel.ipynb
