[package]
name = "tiny_sentence_tokenizer"
version = "0.1.0"
edition = "2021"

# cargo build --features "lib_features"
# cargo build --features "bin_features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tiny_sentence_tokenizer"
crate-type = ["cdylib"]

[[bin]]
name = "run_model"
path = "src/run_model.rs"

[features]
#train_model = ["burn/dataset", "burn/cuda"]
default = []
bin_features = ["anyhow",]
lib_features = ["pyo3"]

[dependencies]
anyhow = { version = "1.0", optional = true }
#ndarray = "0.15"
ort = { version = "2.0.0-rc.2", features = [] }  # omitting "ndarray" support.
pyo3 = { version = "0.22.0", optional = true, features = ["extension-module", "abi3", "generate-import-lib", "anyhow"] }

#[dev-dependencies]
[build-dependencies]
pyo3-build-config = "*"
#burn-import = "0.13.2"
#pretty_assertions = "1"

[profile.release]
strip = true 
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
